--- a/dot_config/windows_terminal/settings.json
+++ b/dot_config/windows_terminal/settings.json
@@ -1,4 +1,5 @@
 {
+    "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
     "actions":
     [
@@ -31,20 +32,31 @@
     "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-    "launchMode": "maximized",
+    "initialCols": 140,
+    "initialRows": 50,
+    "launchMode": "default",
     "profiles":
     {
-        "defaults": {},
+        "defaults":
+        {
+            "colorScheme": "Dracula",
+            "cursorShape": "vintage",
+            "font":
+            {
+                "face": "CaskaydiaCove NF",
+                "size": 12
+            },
+            "opacity": 90,
+            "useAcrylic": true
+        },
         "list":
         [
             {
-                "commandline": "powershell.exe",
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "hidden": false,
                 "name": "Windows PowerShell"
             },
             {
-                "commandline": "cmd.exe",
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": false,
                 "name": "Command Prompt"
@@ -66,6 +78,18 @@
                 "hidden": false,
                 "name": "PowerShell",
                 "source": "Windows.Terminal.PowershellCore"
+            },
+            {
+                "guid": "{c11cb5a4-d307-55d1-abed-4821aa84ce50}",
+                "hidden": false,
+                "name": "Developer Command Prompt for VS 2019",
+                "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "guid": "{8d1a5ab3-8afc-55cf-8220-5b22a15b1d5e}",
+                "hidden": false,
+                "name": "Developer PowerShell for VS 2019",
+                "source": "Windows.Terminal.VisualStudio"
             }
         ]
     },
