update bell settings and theme

--- a/dot_config/windows_terminal/settings.json
+++ b/dot_config/windows_terminal/settings.json
@@ -39,6 +39,7 @@
     {
         "defaults":
         {
+            "bellStyle": "none",
             "colorScheme": "Dracula",
             "cursorShape": "vintage",
             "font":
