chore: cleanup and updates

--- a/dot_config/windows_terminal/settings.json
+++ b/dot_config/windows_terminal/settings.json
@@ -44,7 +44,7 @@
             "cursorShape": "vintage",
             "font": 
             {
-                "face": "CaskaydiaCove NF",
+                "face": "Cascadia Mono",
                 "size": 12
             },
             "opacity": 90,
@@ -73,7 +73,7 @@
                 "commandline": "\"C:\\Program Files\\PowerShell\\7\\pwsh.exe\" -nol",
                 "font": 
                 {
-                    "face": "CaskaydiaCove NF",
+                    "face": "Cascadia Mono",
                     "size": 12
                 },
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
@@ -303,6 +303,29 @@
             "selectionBackground": "#FFFFFF",
             "white": "#D3D7CF",
             "yellow": "#C4A000"
+        },
+        {
+            "background": "#300A24",
+            "black": "#171421",
+            "blue": "#0037DA",
+            "brightBlack": "#767676",
+            "brightBlue": "#08458F",
+            "brightCyan": "#2C9FB3",
+            "brightGreen": "#26A269",
+            "brightPurple": "#A347BA",
+            "brightRed": "#C01C28",
+            "brightWhite": "#F2F2F2",
+            "brightYellow": "#A2734C",
+            "cursorColor": "#FFFFFF",
+            "cyan": "#3A96DD",
+            "foreground": "#FFFFFF",
+            "green": "#26A269",
+            "name": "Ubuntu-22.04-ColorScheme",
+            "purple": "#881798",
+            "red": "#C21A23",
+            "selectionBackground": "#FFFFFF",
+            "white": "#CCCCCC",
+            "yellow": "#A2734C"
         },
         {
             "background": "#000000",
