--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/gitguardian/ggshield
-    rev: main
+    rev: v1.13.6
     hooks:
       - id: ggshield
         language_version: python3
