--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,9 @@
+---
+ci:
+  autofix_prs: true
+  skip:
+    - ggshield
+
 repos:
   - repo: https://github.com/gitguardian/ggshield
     rev: v1.14.5
@@ -5,3 +11,13 @@ repos:
       - id: ggshield
         language_version: python3
         stages: [commit]
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: check-added-large-files
+      - id: check-case-conflict
+      - id: check-executables-have-shebangs
+      - id: check-merge-conflict
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
